'Fixed' the issue. Solution was to hold shift while refreshing the web page...

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -7,7 +7,7 @@ body {
     background-color: powderblue;
 }
 #menu{
-    background-color: red;
+    background-color: seagreen;
     float: left;
     width: 150px;
     height: 100%;
